<resources>
    <string name="app_name">Lab_10</string>
    <string name="english">English</string>
    <string name="france">France</string>
    <string name="select_language">Select language</string>
    <string name="german">German</string>
    <string name="speak">speak</string>
    <string name="enter_text">Enter text</string>
    <string name="select_sms_message">Select SMS-message</string>
    <string name="russian">Russian</string>
</resources>
